Bug 167155 - Fix the JSCOnly build after r210844
Summary: Fix the JSCOnly build after r210844
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Csaba Osztrogonác
URL:
Keywords:
Depends on:
Blocks: 165760
  Show dependency treegraph
 
Reported: 2017-01-18 01:02 PST by Csaba Osztrogonác
Modified: 2017-01-18 04:17 PST (History)
9 users (show)

See Also:


Attachments
Patch (1.07 KB, patch)
2017-01-18 01:04 PST, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2017-01-18 01:02:56 PST
Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/heap/EdenGCActivityCallback.cpp.o: In function `JSC::EdenGCActivityCallback::EdenGCActivityCallback(JSC::Heap*)':
EdenGCActivityCallback.cpp:(.text+0x40): undefined reference to `JSC::Heap::vm() const'
collect2: error: ld returned 1 exit status
ninja: build stopped: subcommand failed.

It seems HeapInlines.h should be included in EdenGCActivityCallback.cpp 
too, fix is coming soon.
Comment 1 Csaba Osztrogonác 2017-01-18 01:04:31 PST
Created attachment 299122 [details]
Patch

patch for EWS, will land after all of them are green
Comment 2 WebKit Commit Bot 2017-01-18 02:26:00 PST
Comment on attachment 299122 [details]
Patch

Clearing flags on attachment: 299122

Committed r210849: <http://trac.webkit.org/changeset/210849>
Comment 3 WebKit Commit Bot 2017-01-18 02:26:04 PST
All reviewed patches have been landed.  Closing bug.
Comment 4 Yusuke Suzuki 2017-01-18 04:17:52 PST
Nice!