Fix the JSCOnly build after r210844 https://bugs.webkit.org/show_bug.cgi?id=167155

Unreviewed buildfix.


* heap/EdenGCActivityCallback.cpp:


Canonical link: https://commits.webkit.org/184202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210849 268f45cc-cd09-0410-ab3c-d52691b4dbfc