Source/JavaScriptCore/heap/EdenGCActivityCallback.cpp
@@ -25,6 +25,7 @@
 
 #include "config.h"
 #include "EdenGCActivityCallback.h"
+#include "HeapInlines.h"
 
 #include "VM.h"
 
